tool-tip enhancement

--- a/css/tool-tip.css
+++ b/css/tool-tip.css
@@ -4,7 +4,7 @@ tool-tip:hover {
 tooltip-popup {
     all: initial;
 
-    display: block;
+    display: none;
     position: absolute;
     top: 0;
     left: 0;
@@ -15,7 +15,7 @@ tooltip-popup {
     opacity: 0;
 
     max-width: 50vw;
-    max-height: 50vh;
+    max-height: 10em;
     overflow-x: hidden;
     overflow-y: auto;
     
@@ -27,13 +27,18 @@ tooltip-popup {
     font-family: sans-serif;
     font-family: 'Inter', sans-serif;
     color: rgb(200, 200, 200);
-    font-size: 75%;
+    font-size: 90%;
+    font-size: 100%;
 
     transform: perspective(100em) rotateX(-45deg) translate(-50%, 5em);
     transition: 0.25s transform ease, 0.25s opacity ease;
 }
 
-tooltip-popup[visible], tooltip-popup[_visible] {
+tooltip-popup[pre_visible] {
+    display: block;
+}
+
+tooltip-popup[visible] {
     /*visibility: visible;*/
     opacity: 1;
 
