--- a/css/tool-tip.css
+++ b/css/tool-tip.css
@@ -6,6 +6,7 @@ tooltip-popup {
 
     display: none;
     position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -15,10 +16,10 @@ tooltip-popup {
     opacity: 0;
 
     max-width: 50vw;
-    max-height: 10em;
+    max-height: 15em;
     overflow-x: hidden;
     overflow-y: auto;
-    
+
     background: rgba(30, 30, 30, 1);
     padding: 0.5em;
     border-radius: 0.5em;
@@ -45,4 +46,11 @@ tooltip-popup[visible] {
     /*transition: transform 2.2s;*/
     transform: rotate(90deg);
     transform: perspective(100em) rotateX(0deg) translate(-50%, 0);
+}
+
+/* temporary, popups inside popups */
+tooltip-popup tooltip-popup,
+tooltip-popup tooltip-popup[pre_visible],
+tooltip-popup tooltip-popup[visible] {
+    display: none;
 }
